--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -16,7 +16,7 @@
     <div class="container">
         <h1 class="mb-5">New Post</h1>
         <form   method="POST"
-                action="/articles/new">
+                action="/posts/new">
 
             <%- include('_form_post_fields') %>
         </form>
