added convertion from markdown to html

--- a/views/posts/display.ejs
+++ b/views/posts/display.ejs
@@ -19,7 +19,7 @@
         <a href="/" class="btn btn-secondary">All Posts</a>
         <a href="/posts/edit/<%= post.id %>" class="btn btn-info">Edit</a>
         <hr>
-        <%= post.markdown %>
+        <%- post.sanitizedHTML %>
       
     </div>
 </body>
